2008-07-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/ui_utils.c, geany.glade:
   Revert editor popup menu Current Word submenu changes. See
   http://lists.uvena.de/geany-devel/2008-July/000101.html.


2008-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.sh, src/highlighting.c:
   Add missing "error" and heredoc styles to filetype Shellscript
   (related to #2026853).
 * waf, wscript:
   Update waf to its latest SVN rev and exclude some unused modules
   which makes it another 20 KB smaller.
   Update waf script to reflect waf API changes(module Install removed).
 * src/editor.c:
   Fix wrong checks when determining whether a style is a PHP style
   (style SCE_HPHP_COMPLEX_VARIABLE was ignored, closes #2027235).


2008-07-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Only compile filetypes_detect_from_file() if HAVE_PLUGINS is defined.
 * src/plugindata.h:
   Rename p_filetypes->detect_from_filename() to detect_from_file() in
   the plugin API.
 * src/ui_utils.c:
   Add dox for all UIUtilsFuncs.
 * src/plugindata.h, src/document.c:
   Rename document_new_file() argument to utf8_filename.
 * src/project.c, src/project.h, src/geany.h:
   Add dox for GeanyApp, GeanyProject.
   Move GeanyProject typedef to project.h, as it is rarely used without
   including project.h.
 * src/plugindata.h, src/document.c, src/document.h:
   Add more dox explaining how to use documents_array (moved from
   document.h, to minimise rebuilding after adding dox).
   Remove some mentions of document indexes in document.c comments.
 * src/vte.c:
   Change VTE restart command to not call vte_terminal_fork_command() -
   this should prevent the hang reported in #1990323 with VTE 0.16.14.
   Note that with VTE 0.16.14 the reset sometimes leaves a blank
   terminal, but pressing enter makes it then behave as normal.

