@@ -3,6 +3,8 @@
  * src/interface.c, src/ui_utils.c, geany.glade:
    Revert editor popup menu Current Word submenu changes. See
    http://lists.uvena.de/geany-devel/2008-July/000101.html.
+ * src/sciwrappers.c, src/plugindata.h:
+   Add dox for ScintillaFuncs.
 
 
 2008-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
